--- a/drivers/gpu/drm/msm/Kconfig
+++ b/drivers/gpu/drm/msm/Kconfig
@@ -220,3 +220,7 @@ config KLAPSE
     default n
     help
         A simple rgb dynamic lapsing module similar to LineageOS' livedisplay
+config FENCE_DEBUG
+	bool "Print fence name to userspace"
+	depends on DRM_MSM
+	default n
