--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -503,6 +503,8 @@ ifdef CONFIG_LTO_CLANG
     # combine symversions for later processing
     update_lto_symversions =				\
 	rm -f $@.symversions; 				\
+    update_lto_symversions =						\
+	rm -f $@.symversions; 						\
 	for i in $(foreach n,						\
 			$(filter-out FORCE,$^),				\
 			$(if $(wildcard $(n).symversions),$(n))); do	\
